fix attribute values overflow

--- a/frontend/src/app/tag/tag.component.scss
+++ b/frontend/src/app/tag/tag.component.scss
@@ -144,6 +144,7 @@
           width: 75%;
           border-left: 2px solid $off-black;
           padding: 0.5rem;
+          overflow-wrap: break-word;
         }
       }
 
